# gost-backup-vault

./: .gitignore  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
scripts/: lint.sh  perf_check.sh  security_scan.sh  test.sh
src/gost_backup_vault/: __init__.py
src/gost_backup_vault/ai/: base.py  policy_advisor.py  risk_assessor.py
src/gost_backup_vault/backends/: base.py  borg_backend.py  restic_backend.py  tar_backend.py
src/gost_backup_vault/cli/: main.py
src/gost_backup_vault/cli/commands/: backup.py  check.py  init_repo.py  metrics_server.py  policy_wizard.py  restore.py
src/gost_backup_vault/config/: loader.py  schema.yaml
src/gost_backup_vault/crypto/: base.py  local_software_gost.py  plugin_loader.py
src/gost_backup_vault/domain/: enums.py  models.py
src/gost_backup_vault/metrics/: exporter.py  mapping.py  registry.py
src/gost_backup_vault/policy/: generator.py  validator.py
src/gost_backup_vault/runner/: executor.py  lock.py
tests/: conftest.py
tests/integration/: test_metrics_end_to_end.py  test_simple_backup_restore_restic.py
tests/unit/: test_backends_restic.py  test_config_loader.py  test_crypto_local.py  test_domain_models.py  test_metrics_mapping.py  test_policy_generator.py  test_policy_validator.py
